@@ -1,5 +1,10 @@
 2013-02-03 Molnar Karoly <molnarkaroly AT users.sf.net>
 
+	* support/scripts/mcs51-disasm.pl: Improved recognition of jump tables and
+	  bugfix.
+
+2013-02-03 Molnar Karoly <molnarkaroly AT users.sf.net>
+
 	* support/scripts/mcs51-disasm.pl: Bugfix and count of references in the RAM.
 
 2013-02-01 Molnar Karoly <molnarkaroly AT users.sf.net>
